--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,13 @@
 
 
+.fleche-1-home{
+  position: absolute;
+  width: 230.75px;
+  height: 211.667px;
+  left: 42%; 
+  bottom: -144px;
+  
+}
 .section-margin-6{
   margin-top: 6% !important;
 }
@@ -16,6 +24,12 @@
   padding-top: 1em;
   padding-bottom: 4em;
 }
+
+.section-padding-x{
+  padding-left: 1.7% !important;
+  padding-right: 1.7% !important;
+}
+
 .dropDown-menu {
   background-color: #fff;
   position: absolute;
@@ -349,7 +363,7 @@
 }
 
 .hotspot-image {
-  width: 100%;
+  width: 90%;
   height: auto;
 }
 
@@ -386,32 +400,32 @@
 
 .sectors {
   top: 45%;
-  left: 13%
+  left: 12%
 }
 
 .businesses {
   top: 61%;
-  left: 12%
+  left: 11%
 }
 
 .data {
   top: 74%;
-  left: 16%
+  left: 14%
 }
 
 .technology {
   top: 87%;
-  left: 19%
+  left: 17%
 }
 
 .data-center {
   top: 51%;
-  left: 45.4%
+  left: 42%
 }
 
 .data-end {
   top: 36.5%;
-  left: 83%
+  left: 76%
 }
 
 .card-title {
@@ -560,15 +574,9 @@
   color: #181236;
 }
 
-.height-l {
-  min-height: 800px !important;
-}
 
-.btn-absolute {
-  position: absolute !important;
-  right: 30%;
-  bottom: 45%;
-}
+
+
 
 .card-absolute {
 
@@ -580,22 +588,26 @@
 .imagine-image {
   width: 100% !important;
   height: auto !important;
-  left: 0;
-  right: 0;
+  right: 0% !important;
+  left: 0% !important;
   bottom: 10%
 }
 
+.btn-absolute {
+  position: absolute !important ;
+  right: 30%;
+  top: 15% ;
+}
+
 .talent-image {
-  width: 100%;
+  width: 586.8px;
   height: auto;
 }
 
 .bulle-image {
-  max-width: 100%;
+  max-width: 313.6px;
   height: auto;
-  position: absolute;
-  top: 0%;
-  left: 60%;
+
 
 }
 
@@ -618,11 +630,19 @@
 }
 
 .hands-home {
-  width: 65%;
+  width: 399px;
   height: auto;
 }
 
+/* mobile*/
 @media only screen and (max-width: 600px) {
+
+  .talent-image{
+    max-width: 297.733px;
+  }
+  .hands-home {
+    max-width: 242.233px;
+  }
   
   .buttonSlider{ 
     z-index: 9; 
@@ -715,14 +735,7 @@
     left: 30%;
   }
 
-  .bulle-image {
-    width: 40% !important;
-    height: auto;
-    position: absolute;
-    top: 45% !important;
-    left: 30% !important;
-
-  }
+ 
 
   .carousel-image {
     left: -50% !important;
@@ -744,31 +757,29 @@
     padding-left: 0% !important;
   }
 
-  .card-absolute {
-    top: 15%;
-    left: 10%;
-  }
 
-  .talent-image {
-    width: 80%;
-    height: auto;
-  }
+ 
 
-
-  .btn-absolute {
-    position: absolute !important;
-    right: 20%;
-    bottom: 5%;
+  .div-absolute{
+    position: absolute;
+    right: 0;
+    left: 0%;
+    top: 85%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .height-l {
-    min-height: 500px !important;
+    min-height: 160px !important;
     padding: 10px !important;
   }
 
   .imagine-image {
 
-    bottom: 25%;
+    bottom: 30% !important;
+    left: 0 !important;
+    right: 0 !important;
   }
 
   .site-padding {
@@ -779,12 +790,8 @@
 
 
   .bulle-image {
-    width: 60%;
-    height: auto;
-    position: absolute;
-    bottom: 5%;
-    left: 25%;
 
+    max-width: 164.517px !important ;
   }
 
   .contact-us-home {
@@ -798,112 +805,13 @@
     left: 0%;
   }
 
-}
-
-@media only screen and (max-width: 900px) and (min-width: 600px) {
-
- 
-
-  .card-absolute{
-    left: 5% !important
-  }
-
-  .btn-absolute{
-
-    top: 50%;
-    right: 100%;
-  }
-
-
-  .contact-us-home-card {
-    height: auto;
-    position: absolute;
-    left: 0%;
-  }
-
-}
-
-@media only screen and (max-width: 900px) and (min-width: 600px) {
-  
-  .text-ourdna {}
-
-
-  .contact-us-home-card {
-    height: auto;
-    position: absolute;
-    left: 0%;
-  }
-
-}
-
-@media only screen and (max-width: 900px) and (min-width: 600px) {
-  
-  .text-ourdna {}
-
-  .contact-us-home {
-    position: relative;
-    min-height: 300px !important;
-  }
-
-  .contact-us-home-card {
-
-    top: 15% !important;
-    left: 5% !important;
-  }
-
-  .contact-us-section-btn {
-    bottom: 10%;
-    left: 20%;
-  }
-
-  .bulle-image {
-    width: 30% !important;
-    height: auto;
-    position: absolute;
-    bottom: 30% !important;
-    left: 60% !important;
-
-  }
-
-
-  .btn-absolute {
-    position: absolute !important;
-    right: 20%;
-    bottom: 40%;
-  }
-
-  .height-l {
-    min-height: 500px !important;
-  }
-
-
-  .carousel-text {
-
-    top: 20% !important;
-    right: 30%;
-  }
-
-  .carousel-image {
-    left: 0% !important;
-
-  }
-
-  .carousel-item {
-    height: 391px !important;
-  }
-
-  .carousel {
-    padding-right: 10px !important;
-    padding-left: 10px !important;
-  }
-
-}
-
-@media only screen and (max-width: 992px) {
-
-  .highlight-spot {
+  .highlight-spot{
     width: 18px;
     height: 18px;
+  } 
+ 
+  .hotspot-image {
+    width: 100% ;
   }
 
   .sectors {
@@ -935,6 +843,107 @@
     top: 32.5%;
     left: 81.5%
   }
+
+}
+
+
+/* tablet */
+
+@media only screen and (max-width: 900px) and (min-width: 600px) {
+
+
+  .bulle-image {
+    width: 198.533px;
+ 
+
+  }
+  .height-l{
+    min-height: 250px !important;
+  }
+  
+
+
+  .talent-image{
+    width: 332.967px;
+  }
+  
+  .hands-home {
+    width: 255.15px;
+  }
+ 
+  .highlight-spot{
+    width: 22px !important;
+    height: 22px !important;
+  } 
+
+  .hotspot-image {
+    width: 709px;
+  }
+
+
+.center-y {
+  transform: translateY(-50%);
+}
+
+.center-x {
+  margin: 50 auto;
+}
+
+.sectors {
+  top: 45.5% !important;
+  left: 13% !important
+}
+
+.businesses {
+  top: 61.5% !important;
+  left: 12%
+}
+
+.data {
+  top: 74.5% !important;
+  left: 16% !important
+}
+
+.technology {
+  top: 87%;
+  left: 19%
+}
+
+.data-center {
+  top: 51%;
+  left: 46%
+}
+
+.data-end {
+  top: 37.5% !important;
+  left: 83% !important
+}
+  .card-absolute{
+    left: 5% !important
+  }
+
+  .btn-absolute{
+
+    bottom: 0% !important;
+    right: 12%;
+  }
+
+
+  .contact-us-home-card {
+    height: auto;
+    position: absolute;
+    left: 0%;
+  }
+
+
+
+
+
+
+
+}
+
+@media only screen and (max-width: 992px) {
 
   .navbar-container {
     width: 100%;
@@ -991,6 +1000,8 @@
   .dropdown-item:hover {
     color: #94949f;
   }
+
+
 
 }
  
@@ -1545,3 +1556,8 @@ padding-bottom:10rem;
   fill: #0C0560;
   color: #0C0560;
 }
+.height-l{
+  min-height: 450px ;
+
+} 
+
