create json file

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,8 @@
 
 
-
+.w-80{
+  width: 80%;
+}
 .fleche-1-home{
   width: 18%;
   height: auto;
@@ -157,8 +159,7 @@
 
 .navbar-brand {
   display: flex !important;
-  align-items: flex-start;
-
+  align-items: start;
 }
 
 .navBar-collapse {
@@ -681,6 +682,7 @@
 /* mobile*/
 @media only screen and (max-width: 600px) {
 
+ 
   .btn-style a{
     font-size: 14px !important;
   }
@@ -1559,7 +1561,7 @@ ul.bullet-before li {
 .main-wrapper{
   width: 1170px;
   margin: 0 auto;
-  max-width: 90%;
+  max-width: 95%;
 
 }
 .content-ourvalues {
