--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,10 +4,10 @@
   width: 80%;
 }
 .fleche-1-home{
-  width: 18%;
+  width: 14%;
   height: auto;
-  top: -20%;
-  right: 0%; 
+  top: -40%;
+  right: 5%; 
 }
 .fleche-2-home{
   width: 12%;
@@ -272,6 +272,7 @@
 }
 
 .copyright {
+  position: relative;
   background-color: #121332;
   border-top: 1px solid #232649;
   display: flex;
@@ -689,6 +690,9 @@
 @media only screen and (max-width: 600px) {
 
  
+  .copyright{
+    padding: 30px 0 27px;
+  }
   .btn-style a{
     font-size: 14px !important;
   }
@@ -963,10 +967,10 @@
 
   
   .fleche-1-home{
-    width: 18%;
+    width: 40% ;
     height: auto;
-    top: -30%;
-    right: 0%; 
+    top: -40%;
+    right: 5%; 
   }
   .fleche-2-home{
     width: 35%;
@@ -1015,6 +1019,12 @@
 
 @media only screen and (max-width: 900px) and (min-width: 600px) {
 
+.margin-bottom-xxl{
+  margin-bottom: 0% !important;
+}
+.section-margin-15{
+  margin-top: 15% !important;
+}
 .mt-sm-6{
   margin-top: 15%;
 }
@@ -1026,10 +1036,7 @@
   width: 100% ;
 }
 .fleche-1-home{
-  width: 18%;
-  height: auto;
-  top: -20%;
-  right: 0%; 
+  display: none; 
 }
 .fleche-2-home{
   width: 18%;
@@ -1977,3 +1984,31 @@ ul.bullet-before li {
   font-family: "Raleway", Helvetica, sans-serif;
 }
 
+.mobile-margin{
+  margin-top: 32% !important;
+}
+
+.scroll-top {
+  position: absolute;
+  background-color: #05f2f2 !important;
+  right: 40px;
+  top: -35%;
+  display: block;
+  line-height: 48px;
+  text-align: center;
+  width: 50px;
+  height: 50px;
+  text-decoration: none;
+  z-index: 9999;
+  border-radius: 10px;
+  cursor: pointer;
+ 
+}
+
+.bi-chevron-up {
+ 
+  width: 100% !important;
+  height: 100% !important;
+  color: #4732d7 !important;
+  font-size: 16px !important;
+}
