--- a/src/styles/globals2.css
+++ b/src/styles/globals2.css
@@ -64,7 +64,7 @@
   
   background-size: cover;
   background-position: center center;
-  height: 60vh;
+  height: 35vh;
 }
 /* .blogHeader {
   position: relative; 
@@ -129,12 +129,12 @@
 
 
 
-.secltion-expbg{
+.secltion-expbg2{
   position: absolute;
   z-index: 0;
   margin: 4% 0 0 17%;
 }
-.secltion-expbg img{
+.secltion-expbg2 img{
 width: 110%;
 }
 .mainindex{
