--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2077,3 +2077,113 @@ ul.bullet-before li {
 .pointer{
   cursor: pointer;
 }
+/******************StyleI********************/
+.TitleHeader{
+  margin: 0 0 -3rem 1.2rem;
+}
+.fleche-1-exp{
+  right: 50%;
+  margin: 0px 0 0 150%;
+  width: 21%;
+}
+
+.fleche-1-exp-container{
+  justify-content: center !important;
+  margin-bottom: -40px !important;
+  width: 50%;
+}
+
+
+@keyframes fadeIn {
+    0% { transform: scale(0);}
+  100% {transform: scale(1);}
+}
+
+
+.expStyle img{
+width: 100%;
+height: 250px;
+animation: fadeIn 2s;
+}
+
+.expStyle p{
+  text-align: center;
+  margin: 10px 0 20px;
+}
+
+.exp_content {
+  position: relative;
+    }
+
+.item_content{
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: #181236B0;
+  padding: 24px;
+  opacity: 0;
+}
+
+.item_content:hover{
+  transition: opacity 1s;
+  opacity: 1;
+}
+
+.item_content .title{
+   font-family: "Raleway", Sans-serif;
+    font-weight: 600;
+    width: max-content !important;
+    width: auto;
+    margin: 0px auto;
+    border-bottom: 3px solid rgb(5 242 242);
+    transition: .2s ease-in all;
+    margin-bottom: 10px;
+    overflow: hidden;
+    text-align: center;
+    color: white;
+}
+.item_content .desp{
+  font-family: "Raleway", Sans-serif;
+  font-size: 13px;
+  font-weight: 300;
+  color: white;
+  text-align: center;
+}
+
+
+.item_content .btn{
+  width: inherit;
+}
+
+.item_content .button-exp{
+  width: auto;
+  margin: 0.8rem !important;
+  padding: 0 25px;
+  font-size: 12px;
+}
+
+
+
+.secltion-expbg{
+  position: absolute;
+  z-index: -1;
+  margin: -7% 0 0 0%;
+}
+.secltion-expbg img{
+width: 107%;
+} 
+.fleche-exp-2{
+  width: 9%;
+  height: auto;
+  right: 43%;
+  bottom: 83%;
+  rotate: 2%;
+  transform: rotate(336deg);
+}
+
+.selectcarr{
+  margin-bottom: 12rem!important;
+}
+
+
+/******************StyleI********************/
