--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1577,7 +1577,7 @@ ul.bullet-before li {
   font-family: "Raleway", Sans-serif !important;
   font-weight: 800 !important;
   line-height: 1.2;
-  padding: 0px 0px 0px 0px;
+  padding: 10px 0px 0px 0px;
   font-size: 20px;
 
 
@@ -1773,7 +1773,7 @@ ul.bullet-before li {
 .sliderstyle {
   background-color: #181236;
   position: relative;
-  padding-top: f10rem;
+  padding-top: 10rem;
 }
 
 .buttonSlider {
@@ -2103,7 +2103,7 @@ ul.bullet-before li {
 .expStyle img{
 width: 100%;
 height: 250px;
-animation: fadeIn 2s;
+animation: fadeIn 1s;
 }
 
 .expStyle p{
@@ -2187,3 +2187,9 @@ width: 107%;
 
 
 /******************StyleI********************/
+.ReactGridGallery_tile{
+  background: transparent !important;
+  }
+  .ReactGridGallery_tile-viewport img{
+    animation: fadeIn 2s;
+  }
