--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -689,6 +689,36 @@
 /* mobile*/
 @media only screen and (max-width: 600px) {
 
+  .life-page-fleche-1{
+    
+    right: 60% !important;
+    top:  -2% !important;
+    width: 18% !important;
+  }
+  .life-page-fleche-2{
+    top: 10% !important;
+    width: 12% !important;
+    right: 50% !important;
+  }
+  
+  .wont-find-container::after{
+    display: none
+  }
+  .main-description{
+    font-size: 28px !important;
+    line-height: 36px !important;
+  }
+  .w-20{
+    width: 100% !important;
+  }
+  .w-32{
+    width: 100% !important;
+  }
+  .diamant-image{
+    margin-top: 10%;
+    width: 60% !important;
+  }
+
   .description{
     font-size: 28px !important;
     line-height: 36px !important;
@@ -1037,6 +1067,16 @@
 /* tablet */
 
 @media only screen and (max-width: 900px) and (min-width: 600px) {
+
+  .life-page-fleche-1{
+    width: 10% !important;
+  }
+  .life-page-fleche-2{
+    width: 10% !important;
+  }
+  .w-20{
+    width: 50% !important;
+  }
 
   .fleche-nos-metiers-2{
     top: -50% !important;
@@ -2235,4 +2275,42 @@ width: 107%;
   background-color: #05F2F2 !important;
   top: 0%;
   left: 0%;
+}
+
+.diamant-image{
+
+  width: 90%;
+}
+
+.p-10{
+  padding: 10px;
+}
+.w-32{
+  width: 32% ;
+}
+
+.icon-text-font{
+font-family: "Raleway", Sans-serif !important;
+font-size: 16px !important;
+font-weight: 500 !important;
+}
+.section-margin-0 {
+  margin-top: 0% !important;
+}
+
+.life-page-fleche-1{
+  position: absolute;
+  top: -4%;
+  right: 40%;
+  width:6%;
+}
+.life-page-fleche-2{
+  position: absolute;
+  right: 40%;
+  width: 7%;
+  top: -40%;
+
+}
+.relative-div-2{
+  height: 100px !important;
 }
