--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,21 +1,123 @@
-
 @import "\globals2.css";
-.w-80{
+
+.ampoule-image-1{
+ position: absolute;
+ width: 65%;
+ height: auto ;
+ top: 0%;
+}
+.ampoule-image-1:hover{
+  width: 60%;
+  transition: width .4s;
+}
+.pe-pointer{
+  cursor: pointer !important;
+}
+.height-xl{
+  height: 400px;
+  margin-bottom: 10% !important;
+}
+.ampoule-image-2{
+  position: absolute;
+  left: 5%;
+  top: 25%;
+  width: 30%;
+ }
+
+ .ampoule-image-2:hover{
+    width: 25%;
+    left: 7%;
+    top: 30%;
+    transition: all .4s;
+  }
+ .ampoule-image-3{
+  position: absolute;
+  width: 35%;
+  left: 33%;  
+  top: 40%;
+ }
+
+ 
+ .ampoule-image-4{
+  position: absolute;
+  width: 30%;
+  top: 25%;
+  right: 5%;
+ }
+
+ .ampoule-image-4:hover{
+  width: 25%;
+  right: 10%;
+  top: 30%;
+  transition: all .4s;
+ }
+.center-text{
+  text-align: center !important;
+}
+.rounded{
+  border-radius: 100% !important;
+  padding: 20px;
+  margin-right: 10px ;
+  background-color: #0C0560;
+  color: white;
+  font-weight: 1000;
+
+}
+
+.input,
+.textarea {
+  font-family: "Fira Sans", Sans-serif;
+  font-weight: 300;
+  color: #5E626C;
+  border-style: solid;
+  border-width: 1px 1px 1px 1px;
+  border-color: #E4E9EC;
+  font-size: 16px;
+  line-height: 28px;
+  padding: 8px 20px;
+  border-radius: 3px 3px 3px 3px;
+}
+
+.label {
+  color: #fff;
+  padding-right: 20px;
+}
+
+input::placeholder {
+  color: #000 !important;
+  font-family: "Fira Sans", Sans-serif !important;
+  opacity: 1;
+  font-weight: 500;
+}
+
+.typography {
+  color: #FFFFFF;
+  font-family: "Raleway", Sans-serif;
+  font-size: 42px;
+  font-weight: 300;
+  margin: 0 0 24px;
+  text-align: center;
+}
+
+.w-80 {
   width: 80%;
 }
-.fleche-1-home{
+
+.fleche-1-home {
   width: 14%;
   height: auto;
   top: -40%;
-  right: 5%; 
+  right: 5%;
 }
-.fleche-2-home{
+
+.fleche-2-home {
   width: 12%;
   height: auto;
   right: 20%;
   bottom: -35%;
 }
-.fleche-3-home{
+
+.fleche-3-home {
   display: block;
   width: 10%;
   height: auto;
@@ -23,13 +125,14 @@
   left: 20%;
 }
 
-.fleche-4-home{
- 
-  right: 50%;;
+.fleche-4-home {
+
+  right: 50%;
+  ;
 
 }
 
-.fleche-5-home{
+.fleche-5-home {
   display: block;
   right: 15%;
   bottom: 20%;
@@ -37,24 +140,27 @@
   width: 20%;
 }
 
-.fleche-6-home{
+.fleche-6-home {
   width: 15%;
   right: 35%;
   bottom: 10%;
   transform: rotate(360deg);
-  
+
 }
-.w-90{
+
+.w-90 {
   width: 90%;
 }
 
-.pb-6{
+.pb-6 {
   padding-bottom: 10%;
 }
-.margin-bottom-xxl{
+
+.margin-bottom-xxl {
   margin-bottom: 10% !important;
 }
-.section-margin-6{
+
+.section-margin-6 {
   margin-top: 6% !important;
 }
 
@@ -71,7 +177,7 @@
   padding-bottom: 4em;
 }
 
-.section-padding-x{
+.section-padding-x {
   padding-left: 1.7% !important;
   padding-right: 1.7% !important;
 }
@@ -550,7 +656,7 @@
     padding-right: 10% !important;
     padding-left: 10% !important;
   }
- 
+
 }
 
 .carousel-text {
@@ -646,9 +752,9 @@
 }
 
 .btn-absolute {
-  position: absolute !important ;
+  position: absolute !important;
   right: 30%;
-  top: 15% ;
+  top: 15%;
 }
 
 .talent-image {
@@ -689,86 +795,106 @@
 /* mobile*/
 @media only screen and (max-width: 600px) {
 
-  .life-page-fleche-1{
-    
+  .life-page-fleche-1 {
+
     right: 60% !important;
-    top:  -2% !important;
+    top: -2% !important;
     width: 18% !important;
   }
-  .life-page-fleche-2{
+
+  .life-page-fleche-2 {
     top: 10% !important;
     width: 12% !important;
     right: 50% !important;
   }
-  
-  .wont-find-container::after{
+
+  .wont-find-container::after {
     display: none
   }
-  .main-description{
+
+  .main-description {
     font-size: 28px !important;
     line-height: 36px !important;
   }
-  .w-20{
+
+  .w-20 {
     width: 100% !important;
   }
-  .w-32{
+
+  .w-32 {
     width: 100% !important;
   }
-  .diamant-image{
+
+  .diamant-image {
     margin-top: 10%;
     width: 60% !important;
   }
 
-  .description{
+  .description {
     font-size: 28px !important;
     line-height: 36px !important;
   }
 
-  .fleche-nos-metiers-2{
+  .fleche-nos-metiers-2 {
     width: 20% !important;
     top: -65% !important;
   }
-  .fleche-nos-metiers{
+
+  .fleche-nos-metiers {
     width: 30% !important;
     right: 12% !important;
 
 
 
   }
-  .copyright{
-    padding: 30px 0 27px;}
+
+  .copyright {
+    padding: 30px 0 27px;
+  }
+
   .section2-ourdna {
     margin-top: 0px !important;
-     ;
-  
+    ;
+
   }
-  .btn-style a{
+
+  .btn-style a {
     font-size: 14px !important;
   }
-  .margin-bottom-xxl{
+
+  .margin-bottom-xxl {
 
     margin-bottom: 5% !important;
   }
-  .talent-image{
+
+  .talent-image {
     max-width: 297.733px;
   }
+
   .hands-home {
     max-width: 242.233px;
   }
+
   .tunisie-map {
     top: 37% !important;
     left: 41.6% !important;
 
   }
-  .ReactGridGallery_tile-viewport > img {width: 100% !important;margin-left: 0px !important;}
+
+  .ReactGridGallery_tile-viewport>img {
+    width: 100% !important;
+    margin-left: 0px !important;
+  }
 
 
   .ReactGridGallery_tile {
-      width: 100% !important;
+    width: 100% !important;
   }
+
   .ReactGridGallery_tile-viewport {
-      width: 100% !important;
+    width: 100% !important;
   }
+
   .maroc-map {
     top: 43% !important;
     left: 38.6% !important;
@@ -900,7 +1026,7 @@
     left: 30%;
   }
 
- 
+
 
   .carousel-image {
     left: -50% !important;
@@ -923,9 +1049,9 @@
   }
 
 
- 
 
-  .div-absolute{
+
+  .div-absolute {
     position: absolute;
     right: 0;
     left: 0%;
@@ -956,7 +1082,7 @@
 
   .bulle-image {
 
-    max-width: 164.517px !important ;
+    max-width: 164.517px !important;
   }
 
   .contact-us-home {
@@ -970,13 +1096,13 @@
     left: 0%;
   }
 
-  .highlight-spot{
+  .highlight-spot {
     width: 18px;
     height: 18px;
-  } 
- 
+  }
+
   .hotspot-image {
-    width: 100% ;
+    width: 100%;
   }
 
   .sectors {
@@ -1009,25 +1135,27 @@
     left: 81.5%
   }
 
-    .mt-mobile{
-      margin-top: 30% !important;
-    }
+  .mt-mobile {
+    margin-top: 30% !important;
+  }
 
 
-  
-  .fleche-1-home{
-    width: 40% ;
+
+  .fleche-1-home {
+    width: 40%;
     height: auto;
     top: -40%;
-    right: 5%; 
+    right: 5%;
   }
-  .fleche-2-home{
+
+  .fleche-2-home {
     width: 35%;
     height: auto;
     right: 20%;
     bottom: -20%;
   }
-  .fleche-3-home{
+
+  .fleche-3-home {
     display: block;
     transform: rotateY(180deg);
 
@@ -1036,29 +1164,30 @@
     height: auto;
     bottom: -10%;
     left: 75%;
-    
+
   }
-  
-  .fleche-4-home{
+
+  .fleche-4-home {
     width: 50%;
 
   }
-  
-  .fleche-4-home-container{
+
+  .fleche-4-home-container {
     justify-content: center !important;
     margin-bottom: 10%;
   }
-  .fleche-5-home{
-   display: none;
+
+  .fleche-5-home {
+    display: none;
   }
-  
-  .fleche-6-home{
+
+  .fleche-6-home {
     width: 30%;
     right: 8%;
     bottom: 25%;
     transform: rotate(-60deg);
 
-    
+
   }
 
 }
@@ -1068,146 +1197,167 @@
 
 @media only screen and (max-width: 900px) and (min-width: 600px) {
 
-  .life-page-fleche-1{
+
+.ampoule-image-1{
+  position: absolute;
+  width: 65%;
+  height: auto ;
+  top: 8%;
+ }
+
+
+  .life-page-fleche-1 {
     width: 10% !important;
   }
-  .life-page-fleche-2{
+
+  .life-page-fleche-2 {
     width: 10% !important;
   }
-  .w-20{
+
+  .w-20 {
     width: 50% !important;
   }
 
-  .fleche-nos-metiers-2{
+  .fleche-nos-metiers-2 {
     top: -50% !important;
     right: 15%;
   }
-.margin-bottom-xxl{
-  margin-bottom: 0% !important;
-}
-.section-margin-15{
-  margin-top: 15% !important;
-}
-.mt-sm-6{
-  margin-top: 15%;
-}
-.mt-sm-7{
-  margin-top: 20%;
-}
 
-.w-90{
-  width: 100% ;
-}
-.fleche-1-home{
-  display: none; 
-}
-.fleche-2-home{
-  width: 18%;
-  height: auto;
-  right: 20%;
-  bottom: -20%;
-}
-.fleche-3-home{
-  display: none;
-  width: 10%;
-  height: auto;
-  bottom: -40%;
-  left: 20%;
-}
+  .margin-bottom-xxl {
+    margin-bottom: 0% !important;
+  }
 
-.fleche-4-home{
- 
-  right: 50%;;
+  .section-margin-15 {
+    margin-top: 15% !important;
+  }
 
-}
+  .mt-sm-6 {
+    margin-top: 15%;
+  }
 
-.fleche-5-home{
-  display: block;
-  right: 15%;
-  bottom: 18%;
-  transform: rotate(-30deg);
-  width: 20%;
-}
+  .mt-sm-7 {
+    margin-top: 20%;
+  }
 
-.fleche-6-home{
-  width: 20%;
-  right: 30%;
-  bottom: 18%;
-  transform: rotate(360deg);
-  
-}
+  .w-90 {
+    width: 100%;
+  }
+
+  .fleche-1-home {
+    display: none;
+  }
+
+  .fleche-2-home {
+    width: 18%;
+    height: auto;
+    right: 20%;
+    bottom: -20%;
+  }
+
+  .fleche-3-home {
+    display: none;
+    width: 10%;
+    height: auto;
+    bottom: -40%;
+    left: 20%;
+  }
+
+  .fleche-4-home {
+
+    right: 50%;
+    ;
+
+  }
+
+  .fleche-5-home {
+    display: block;
+    right: 15%;
+    bottom: 18%;
+    transform: rotate(-30deg);
+    width: 20%;
+  }
+
+  .fleche-6-home {
+    width: 20%;
+    right: 30%;
+    bottom: 18%;
+    transform: rotate(360deg);
+
+  }
 
   .bulle-image {
     width: 198.533px;
- 
+
 
   }
-  .height-l{
+
+  .height-l {
     min-height: 250px !important;
   }
-  
 
 
-  .talent-image{
+
+  .talent-image {
     width: 332.967px;
   }
-  
+
   .hands-home {
     width: 255.15px;
   }
- 
-  .highlight-spot{
+
+  .highlight-spot {
     width: 22px !important;
     height: 22px !important;
-  } 
+  }
 
   .hotspot-image {
     width: 709px;
   }
 
 
-.center-y {
-  transform: translateY(-50%);
-}
+  .center-y {
+    transform: translateY(-50%);
+  }
 
-.center-x {
-  margin: 50 auto;
-}
+  .center-x {
+    margin: 50 auto;
+  }
 
-.sectors {
-  top: 45.5% !important;
-  left: 13% !important
-}
+  .sectors {
+    top: 45.5% !important;
+    left: 13% !important
+  }
 
-.businesses {
-  top: 61.5% !important;
-  left: 12%
-}
+  .businesses {
+    top: 61.5% !important;
+    left: 12%
+  }
 
-.data {
-  top: 74.5% !important;
-  left: 16% !important
-}
+  .data {
+    top: 74.5% !important;
+    left: 16% !important
+  }
 
-.technology {
-  top: 87%;
-  left: 19%
-}
+  .technology {
+    top: 87%;
+    left: 19%
+  }
 
-.data-center {
-  top: 51%;
-  left: 46%
-}
+  .data-center {
+    top: 51%;
+    left: 46%
+  }
 
-.data-end {
-  top: 37.5% !important;
-  left: 83% !important
-}
-  .card-absolute{
+  .data-end {
+    top: 37.5% !important;
+    left: 83% !important
+  }
+
+  .card-absolute {
     left: 5% !important
   }
 
-  .btn-absolute{
+  .btn-absolute {
 
     bottom: 0% !important;
     right: 12%;
@@ -1234,10 +1384,12 @@
     width: 100%;
 
   }
+
   .highlight-spot-map {
     width: 18px;
     height: 18px;
   }
+
   .dropDown-menu {
     position: static;
     width: 100%;
@@ -1482,7 +1634,7 @@ ul.bullet-before li {
   }
 
   .world-map {
-    width:83.5% !important;
+    width: 83.5% !important;
     margin: 0 auto;
     display: block;
   }
@@ -1504,7 +1656,7 @@ ul.bullet-before li {
   }
 
   .content-ourvalues {
-    padding:20px;
+    padding: 20px;
     background-color: #181236;
     margin: 20px;
 
@@ -1607,7 +1759,7 @@ ul.bullet-before li {
 
 .sectionourvalues {
   background-color: #181236;
-  margin-top: 100px  ;
+  margin-top: 100px;
   margin-bottom: 100px !important;
 
 
@@ -1633,7 +1785,7 @@ ul.bullet-before li {
 
 .content:hover {
   color: black;
-  background-color: white; 
+  background-color: white;
   border-top: 10px solid #1EEDE2;
   height: 100%;
   transition: color 0.3s ease-in;
@@ -1749,8 +1901,8 @@ ul.bullet-before li {
 
 .HeaderPage>div>h1 {
   font-family: "Raleway", Sans-serif !important;
-  font-weight: 700  ;
-  font-size: 42px ;
+  font-weight: 700;
+  font-size: 42px;
   color: #181236;
   font-weight: bold;
 
@@ -1764,7 +1916,7 @@ ul.bullet-before li {
 }
 
 .content-ourvalues {
- 
+
   margin: 10px;
   padding-right: 1.25rem !important;
   padding-left: 1.25rem !important;
@@ -1914,10 +2066,11 @@ ul.bullet-before li {
   fill: #0C0560;
   color: #0C0560;
 }
-.height-l{
-  min-height: 450px ;
 
-} 
+.height-l {
+  min-height: 450px;
+
+}
 
 .letter-spacing {
   letter-spacing: 2px !important;
@@ -2027,10 +2180,11 @@ ul.bullet-before li {
 
 }
 
-.ReactGridGallery_custom-overlay{
-  transition: all .5s ease-in-out; 
-  background: #181236b0 !important; 
+.ReactGridGallery_custom-overlay {
+  transition: all .5s ease-in-out;
+  background: #181236b0 !important;
 }
+
 .style-element1 {
   color: white;
   font-weight: 700;
@@ -2038,20 +2192,20 @@ ul.bullet-before li {
   width: 50%;
   margin: 0px auto;
   border-bottom: 3px solid rgb(5 242 242);
-  
+
   overflow: hidden;
   font-family: "Raleway", Helvetica, sans-serif;
 
 }
 
 .style-element2 {
- 
+
   color: white;
   font-weight: 500;
   font-family: "Raleway", Helvetica, sans-serif;
 }
 
-.mobile-margin{
+.mobile-margin {
   margin-top: 32% !important;
 }
 
@@ -2072,41 +2226,41 @@ ul.bullet-before li {
 }
 
 .bi-chevron-up {
- 
+
   width: 100% !important;
   height: 100% !important;
   color: #4732d7 !important;
   font-size: 16px !important;
 }
 
-.description{
+.description {
   font-family: "Raleway", Sans-serif;
   font-size: 20px;
   font-weight: bold;
   line-height: 36px;
 }
 
-.globale-primary-color{
+.globale-primary-color {
   color: #181236
 }
 
 
 
-.relative-div{
+.relative-div {
   position: relative;
   height: 20px;
   margin-bottom: 10%;
   margin-top: 0%;
 }
 
-.fleche-nos-metiers{
-  
+.fleche-nos-metiers {
+
   position: absolute;
-  right: 10%; 
+  right: 10%;
   top: -100% !important;
 }
 
-.fleche-nos-metiers-2{
+.fleche-nos-metiers-2 {
   width: 18%;
   position: absolute;
   top: -75%;
@@ -2114,20 +2268,22 @@ ul.bullet-before li {
 
 }
 
-.pointer{
+.pointer {
   cursor: pointer;
 }
+
 /******************StyleI********************/
-.TitleHeader{
+.TitleHeader {
   margin: 0 0 -3rem 1.2rem;
 }
-.fleche-1-exp{
+
+.fleche-1-exp {
   right: 50%;
   margin: 0px 0 0 150%;
   width: 21%;
 }
 
-.fleche-1-exp-container{
+.fleche-1-exp-container {
   justify-content: center !important;
   margin-bottom: -40px !important;
   width: 50%;
@@ -2135,27 +2291,32 @@ ul.bullet-before li {
 
 
 @keyframes fadeIn {
-    0% { transform: scale(0);}
-  100% {transform: scale(1);}
+  0% {
+    transform: scale(0);
+  }
+
+  100% {
+    transform: scale(1);
+  }
 }
 
 
-.expStyle img{
-width: 100%;
-height: 250px;
-animation: fadeIn 1s;
+.expStyle img {
+  width: 100%;
+  height: 250px;
+  animation: fadeIn 1s;
 }
 
-.expStyle p{
+.expStyle p {
   text-align: center;
   margin: 10px 0 20px;
 }
 
 .exp_content {
   position: relative;
-    }
+}
 
-.item_content{
+.item_content {
   position: absolute;
   height: 100%;
   width: 100%;
@@ -2164,25 +2325,26 @@ animation: fadeIn 1s;
   opacity: 0;
 }
 
-.item_content:hover{
+.item_content:hover {
   transition: opacity 1s;
   opacity: 1;
 }
 
-.item_content .title{
-   font-family: "Raleway", Sans-serif;
-    font-weight: 600;
-    width: max-content !important;
-    width: auto;
-    margin: 0px auto;
-    border-bottom: 3px solid rgb(5 242 242);
-    transition: .2s ease-in all;
-    margin-bottom: 10px;
-    overflow: hidden;
-    text-align: center;
-    color: white;
+.item_content .title {
+  font-family: "Raleway", Sans-serif;
+  font-weight: 600;
+  width: max-content !important;
+  width: auto;
+  margin: 0px auto;
+  border-bottom: 3px solid rgb(5 242 242);
+  transition: .2s ease-in all;
+  margin-bottom: 10px;
+  overflow: hidden;
+  text-align: center;
+  color: white;
 }
-.item_content .desp{
+
+.item_content .desp {
   font-family: "Raleway", Sans-serif;
   font-size: 13px;
   font-weight: 300;
@@ -2191,11 +2353,11 @@ animation: fadeIn 1s;
 }
 
 
-.item_content .btn{
+.item_content .btn {
   width: inherit;
 }
 
-.item_content .button-exp{
+.item_content .button-exp {
   width: auto;
   margin: 0.8rem !important;
   padding: 0 25px;
@@ -2204,15 +2366,17 @@ animation: fadeIn 1s;
 
 
 
-.secltion-expbg{
+.secltion-expbg {
   position: absolute;
   z-index: -1;
   margin: -7% 0 0 0%;
 }
-.secltion-expbg img{
-width: 107%;
-} 
-.fleche-exp-2{
+
+.secltion-expbg img {
+  width: 107%;
+}
+
+.fleche-exp-2 {
   width: 9%;
   height: auto;
   right: 43%;
@@ -2221,19 +2385,21 @@ width: 107%;
   transform: rotate(336deg);
 }
 
-.selectcarr{
-  margin-bottom: 12rem!important;
+.selectcarr {
+  margin-bottom: 12rem !important;
 }
 
 
 /******************StyleI********************/
-.ReactGridGallery_tile{
+.ReactGridGallery_tile {
   background: transparent !important;
-  }
-  .ReactGridGallery_tile-viewport img{
-    animation: fadeIn 2s;
-  }
-.sub-description{
+}
+
+.ReactGridGallery_tile-viewport img {
+  animation: fadeIn 2s;
+}
+
+.sub-description {
   font-family: "Raleway", Sans-serif;
   font-size: 12px;
   font-weight: 500;
@@ -2243,31 +2409,35 @@ width: 107%;
   color: #181236;
   text-align: center !important;
 }
-.main-description{
+
+.main-description {
   font-family: "Raleway", Sans-serif;
   font-size: 20px;
   font-weight: bold;
   line-height: 36px;
   color: #181236;
 }
-.w-20{
+
+.w-20 {
   width: 20%;
 }
-.what-you-will-find{
-  color:#05F2F2;
+
+.what-you-will-find {
+  color: #05F2F2;
   font-family: "Raleway", Sans-serif;
   font-size: 16px;
   font-weight: 600;
 }
 
-.del{
- opacity: .5; 
+.del {
+  opacity: .5;
 }
 
-.wont-find-container{
+.wont-find-container {
   position: relative !important;
 }
-.wont-find-container::after{
+
+.wont-find-container::after {
   content: "";
   position: absolute !important;
   height: 100% !important;
@@ -2277,40 +2447,44 @@ width: 107%;
   left: 0%;
 }
 
-.diamant-image{
+.diamant-image {
 
   width: 90%;
 }
 
-.p-10{
+.p-10 {
   padding: 10px;
 }
-.w-32{
-  width: 32% ;
+
+.w-32 {
+  width: 32%;
 }
 
-.icon-text-font{
-font-family: "Raleway", Sans-serif !important;
-font-size: 16px !important;
-font-weight: 500 !important;
+.icon-text-font {
+  font-family: "Raleway", Sans-serif !important;
+  font-size: 16px !important;
+  font-weight: 500 !important;
 }
+
 .section-margin-0 {
   margin-top: 0% !important;
 }
 
-.life-page-fleche-1{
+.life-page-fleche-1 {
   position: absolute;
   top: -4%;
   right: 40%;
-  width:6%;
+  width: 6%;
 }
-.life-page-fleche-2{
+
+.life-page-fleche-2 {
   position: absolute;
   right: 40%;
   width: 7%;
   top: -40%;
 
 }
-.relative-div-2{
+
+.relative-div-2 {
   height: 100px !important;
 }
